// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyze Danceability "test/audio/scale-piano.wav" 1`] = `1.1009137630462646`;

exports[`Analyze Danceability "test/audio/scale-saw.wav" 1`] = `1.4916077852249146`;

exports[`Analyze Danceability "test/audio/scale-sin.wav" 1`] = `1.4916197061538696`;

exports[`Analyze Danceability "test/audio/scale-square.wav" 1`] = `1.491768717765808`;

exports[`Analyze Danceability "test/audio/scale-triangle.wav" 1`] = `1.4916062355041504`;

exports[`Analyze Danceability "test/audio/scale2-piano.wav" 1`] = `1.0301882028579712`;

exports[`Analyze Danceability "test/audio/scale2-saw.wav" 1`] = `1.2293025255203247`;

exports[`Analyze Danceability "test/audio/scale2-sin.wav" 1`] = `1.2316737174987793`;

exports[`Analyze Danceability "test/audio/scale2-square.wav" 1`] = `1.2305712699890137`;

exports[`Analyze Danceability "test/audio/scale2-triangle.wav" 1`] = `1.2317447662353516`;

exports[`Analyze Danceability "test/audio/velocity-piano.wav" 1`] = `0.8397646546363831`;

exports[`Analyze Danceability "test/audio/velocity-saw.wav" 1`] = `0.8700812458992004`;

exports[`Analyze Danceability "test/audio/velocity-sin.wav" 1`] = `0.869825541973114`;

exports[`Analyze Danceability "test/audio/velocity-square.wav" 1`] = `0.8699465990066528`;

exports[`Analyze Danceability "test/audio/velocity-triangle.wav" 1`] = `0.8698005676269531`;

exports[`Analyze Duration "test/audio/scale-piano.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale-saw.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale-sin.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale-square.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale-triangle.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale2-piano.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale2-saw.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale2-sin.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale2-square.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale2-triangle.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/velocity-piano.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/velocity-saw.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/velocity-sin.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/velocity-square.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/velocity-triangle.wav" 1`] = `8`;

exports[`Analyze Energy "test/audio/scale-piano.wav" 1`] = `1567.6304931640625`;

exports[`Analyze Energy "test/audio/scale-saw.wav" 1`] = `55246.71484375`;

exports[`Analyze Energy "test/audio/scale-sin.wav" 1`] = `84008.9765625`;

exports[`Analyze Energy "test/audio/scale-square.wav" 1`] = `100075.0625`;

exports[`Analyze Energy "test/audio/scale-triangle.wav" 1`] = `56004.390625`;

exports[`Analyze Energy "test/audio/scale2-piano.wav" 1`] = `1959.48193359375`;

exports[`Analyze Energy "test/audio/scale2-saw.wav" 1`] = `45086.625`;

exports[`Analyze Energy "test/audio/scale2-sin.wav" 1`] = `68524.546875`;

exports[`Analyze Energy "test/audio/scale2-square.wav" 1`] = `81642.2578125`;

exports[`Analyze Energy "test/audio/scale2-triangle.wav" 1`] = `45682.25`;

exports[`Analyze Energy "test/audio/velocity-piano.wav" 1`] = `342.1805419921875`;

exports[`Analyze Energy "test/audio/velocity-saw.wav" 1`] = `17524.001953125`;

exports[`Analyze Energy "test/audio/velocity-sin.wav" 1`] = `26328.845703125`;

exports[`Analyze Energy "test/audio/velocity-square.wav" 1`] = `31499.65625`;

exports[`Analyze Energy "test/audio/velocity-triangle.wav" 1`] = `17549.138671875`;

exports[`Analyze Key "test/audio/scale-piano.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale-saw.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale-sin.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale-square.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale-triangle.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale2-piano.wav" 1`] = `"F"`;

exports[`Analyze Key "test/audio/scale2-saw.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale2-sin.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale2-square.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale2-triangle.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/velocity-piano.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/velocity-saw.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/velocity-sin.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/velocity-square.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/velocity-triangle.wav" 1`] = `"C"`;

exports[`Analyze Loudness "test/audio/scale-piano.wav" 1`] = `-25.142505645751953`;

exports[`Analyze Loudness "test/audio/scale-saw.wav" 1`] = `-8.667534828186035`;

exports[`Analyze Loudness "test/audio/scale-sin.wav" 1`] = `-7.181407451629639`;

exports[`Analyze Loudness "test/audio/scale-square.wav" 1`] = `-6.221879959106445`;

exports[`Analyze Loudness "test/audio/scale-triangle.wav" 1`] = `-8.916343688964844`;

exports[`Analyze Loudness "test/audio/scale2-piano.wav" 1`] = `-22.920133590698242`;

exports[`Analyze Loudness "test/audio/scale2-saw.wav" 1`] = `-9.128947257995605`;

exports[`Analyze Loudness "test/audio/scale2-sin.wav" 1`] = `-7.667166233062744`;

exports[`Analyze Loudness "test/audio/scale2-square.wav" 1`] = `-6.700174331665039`;

exports[`Analyze Loudness "test/audio/scale2-triangle.wav" 1`] = `-9.404030799865723`;

exports[`Analyze Loudness "test/audio/velocity-piano.wav" 1`] = `-31.488279342651367`;

exports[`Analyze Loudness "test/audio/velocity-saw.wav" 1`] = `-13.58476734161377`;

exports[`Analyze Loudness "test/audio/velocity-sin.wav" 1`] = `-12.513080596923828`;

exports[`Analyze Loudness "test/audio/velocity-square.wav" 1`] = `-11.325491905212402`;

exports[`Analyze Loudness "test/audio/velocity-triangle.wav" 1`] = `-14.237661361694336`;

exports[`Analyze Notes "test/audio/scale-piano.wav" 1`] = `
Array [
  Object {
    "duration": 0.9868480507284403,
    "loudness": -24.982933044433594,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.01160997711122036,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -21.020967483520508,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9984580278396606,
  },
  Object {
    "duration": 1.0100681781768799,
    "loudness": -22.035972595214844,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9969160556793213,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -27.22672462463379,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 3.006984233856201,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -26.706178665161133,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 4.005442142486572,
  },
  Object {
    "duration": 0.9984583854675293,
    "loudness": -27.34674644470215,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 5.003900051116943,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -27.742883682250977,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 6.002358436584473,
  },
  Object {
    "duration": 0.9991836547851562,
    "loudness": -28.327669143676758,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 7.000816345214844,
  },
]
`;

exports[`Analyze Notes "test/audio/scale-saw.wav" 1`] = `
Array [
  Object {
    "duration": 0.9868480507284403,
    "loudness": -7.996877670288086,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.01160997711122036,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -7.875982761383057,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9984580278396606,
  },
  Object {
    "duration": 0.9984581470489502,
    "loudness": -7.744608402252197,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9969160556793213,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -7.724128723144531,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.9953742027282715,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -7.527021408081055,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.9938321113586426,
  },
  Object {
    "duration": 0.9984583854675293,
    "loudness": -7.4326019287109375,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.992290019989014,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -7.393989086151123,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.990748405456543,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -7.342189788818359,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 6.989206314086914,
  },
]
`;

exports[`Analyze Notes "test/audio/scale-sin.wav" 1`] = `
Array [
  Object {
    "duration": 0.9868480507284403,
    "loudness": -6.953761100769043,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.01160997711122036,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -6.686707496643066,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9984580278396606,
  },
  Object {
    "duration": 0.9984581470489502,
    "loudness": -6.38610315322876,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9969160556793213,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -6.249267101287842,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.9953742027282715,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -6.0825514793396,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.9938321113586426,
  },
  Object {
    "duration": 0.9984583854675293,
    "loudness": -5.875964164733887,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.992290019989014,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -5.71295690536499,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.990748405456543,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -5.691052436828613,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 6.989206314086914,
  },
]
`;

exports[`Analyze Notes "test/audio/scale-square.wav" 1`] = `
Array [
  Object {
    "duration": 0.9868480507284403,
    "loudness": -5.765986919403076,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.01160997711122036,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -5.586495876312256,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9984580278396606,
  },
  Object {
    "duration": 0.9984581470489502,
    "loudness": -5.363379955291748,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9969160556793213,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -5.26287841796875,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.9953742027282715,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -5.128885269165039,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.9938321113586426,
  },
  Object {
    "duration": 0.9984583854675293,
    "loudness": -4.992731094360352,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.992290019989014,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -4.852355480194092,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.990748405456543,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -4.834864139556885,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 6.989206314086914,
  },
]
`;

exports[`Analyze Notes "test/audio/scale-triangle.wav" 1`] = `
Array [
  Object {
    "duration": 0.9868480507284403,
    "loudness": -8.688947677612305,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.01160997711122036,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -8.423367500305176,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9984580278396606,
  },
  Object {
    "duration": 0.9984581470489502,
    "loudness": -8.121993064880371,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9969160556793213,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -7.995360374450684,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.9953742027282715,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -7.830482482910156,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.9938321113586426,
  },
  Object {
    "duration": 0.9984583854675293,
    "loudness": -7.622878074645996,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.992290019989014,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -7.467611312866211,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.990748405456543,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -7.444631099700928,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 6.989206314086914,
  },
]
`;

exports[`Analyze Notes "test/audio/scale2-piano.wav" 1`] = `
Array [
  Object {
    "duration": 0.5108389854431152,
    "loudness": -25.92654800415039,
    "midi": 66,
    "name": "F#",
    "octave": 5,
    "start": 2.9953742027282715,
  },
  Object {
    "duration": 1.9976415634155273,
    "loudness": -29.81737518310547,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 6.002358436584473,
  },
]
`;

exports[`Analyze Notes "test/audio/scale2-saw.wav" 1`] = `
Array [
  Object {
    "duration": 2.008525848388672,
    "loudness": -8.380148887634277,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 5.990748405456543,
  },
]
`;

exports[`Analyze Notes "test/audio/scale2-sin.wav" 1`] = `
Array [
  Object {
    "duration": 2.008525848388672,
    "loudness": -6.69907283782959,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 5.990748405456543,
  },
]
`;

exports[`Analyze Notes "test/audio/scale2-square.wav" 1`] = `
Array [
  Object {
    "duration": 2.008525848388672,
    "loudness": -5.826202392578125,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 5.990748405456543,
  },
]
`;

exports[`Analyze Notes "test/audio/scale2-triangle.wav" 1`] = `
Array [
  Object {
    "duration": 2.008525848388672,
    "loudness": -8.460933685302734,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 5.990748405456543,
  },
]
`;

exports[`Analyze Notes "test/audio/velocity-piano.wav" 1`] = `
Array [
  Object {
    "duration": 0.99845808185637,
    "loudness": -24.975357055664062,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.01160997711122036,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -28.17560577392578,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 1.0100680589675903,
  },
  Object {
    "duration": 0.9984581470489502,
    "loudness": -32.556732177734375,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 2.008526086807251,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -37.77674865722656,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 3.006984233856201,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -41.41238021850586,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 4.017052173614502,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -45.61000442504883,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 5.027120113372803,
  },
  Object {
    "duration": 1.0216779708862305,
    "loudness": -48.213356018066406,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 6.0371880531311035,
  },
  Object {
    "duration": 0.941133975982666,
    "loudness": -51.24598693847656,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 7.058866024017334,
  },
]
`;

exports[`Analyze Notes "test/audio/velocity-saw.wav" 1`] = `
Array [
  Object {
    "duration": 0.9868480507284403,
    "loudness": -7.996886253356934,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.01160997711122036,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -9.694103240966797,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.9984580278396606,
  },
  Object {
    "duration": 0.9984581470489502,
    "loudness": -11.736340522766113,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 1.9969160556793213,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -14.452102661132812,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 2.9953742027282715,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -17.61635971069336,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 4.005442142486572,
  },
  Object {
    "duration": 1.010068416595459,
    "loudness": -22.197071075439453,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 5.003900051116943,
  },
  Object {
    "duration": 1.9853057861328125,
    "loudness": -31.873310089111328,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 6.013968467712402,
  },
]
`;

exports[`Analyze Notes "test/audio/velocity-sin.wav" 1`] = `
Array [
  Object {
    "duration": 0.9868480507284403,
    "loudness": -6.953763008117676,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.01160997711122036,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -8.66938591003418,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.9984580278396606,
  },
  Object {
    "duration": 0.9984581470489502,
    "loudness": -10.711615562438965,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 1.9969160556793213,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -13.424641609191895,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 2.9953742027282715,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -16.598445892333984,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 4.005442142486572,
  },
  Object {
    "duration": 1.0216779708862305,
    "loudness": -21.199554443359375,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 5.003900051116943,
  },
  Object {
    "duration": 1.973696231842041,
    "loudness": -30.835651397705078,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 6.025578022003174,
  },
]
`;

exports[`Analyze Notes "test/audio/velocity-square.wav" 1`] = `
Array [
  Object {
    "duration": 0.9868480507284403,
    "loudness": -5.76598596572876,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.01160997711122036,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -7.470810890197754,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.9984580278396606,
  },
  Object {
    "duration": 0.9984581470489502,
    "loudness": -9.51303768157959,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 1.9969160556793213,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -12.227499008178711,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 2.9953742027282715,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -15.405142784118652,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 4.005442142486572,
  },
  Object {
    "duration": 0.9984583854675293,
    "loudness": -18.926963806152344,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 5.003900051116943,
  },
  Object {
    "duration": 1.9969158172607422,
    "loudness": -29.59880828857422,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 6.002358436584473,
  },
]
`;

exports[`Analyze Notes "test/audio/velocity-triangle.wav" 1`] = `
Array [
  Object {
    "duration": 0.9868480507284403,
    "loudness": -8.68895435333252,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.01160997711122036,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -10.402562141418457,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.9984580278396606,
  },
  Object {
    "duration": 0.9984581470489502,
    "loudness": -12.444782257080078,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 1.9969160556793213,
  },
  Object {
    "duration": 1.0100679397583008,
    "loudness": -15.158384323120117,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 2.9953742027282715,
  },
  Object {
    "duration": 0.9984579086303711,
    "loudness": -18.333059310913086,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 4.005442142486572,
  },
  Object {
    "duration": 1.010068416595459,
    "loudness": -22.935848236083984,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 5.003900051116943,
  },
  Object {
    "duration": 1.9853057861328125,
    "loudness": -32.58883285522461,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 6.013968467712402,
  },
]
`;

exports[`Analyze Onsets "test/audio/scale-piano.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  3.006984233856201,
  4.005442142486572,
  5.003900051116943,
  6.002358436584473,
  7.000816345214844,
]
`;

exports[`Analyze Onsets "test/audio/scale-saw.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  3.9938321113586426,
  4.992290019989014,
  5.990748405456543,
  6.989206314086914,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale-sin.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  3.9938321113586426,
  4.992290019989014,
  5.990748405456543,
  6.989206314086914,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale-square.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  3.9938321113586426,
  4.992290019989014,
  5.990748405456543,
  6.989206314086914,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale-triangle.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  3.9938321113586426,
  4.992290019989014,
  5.990748405456543,
  6.989206314086914,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale2-piano.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.4992290139198303,
  0.9984580278396606,
  1.4976871013641357,
  1.9969160556793213,
  2.496145009994507,
  2.9953742027282715,
  3.5062131881713867,
  4.005442142486572,
  4.504671096801758,
  5.003900051116943,
  5.503129482269287,
  6.002358436584473,
]
`;

exports[`Analyze Onsets "test/audio/scale2-saw.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.4992290139198303,
  0.9984580278396606,
  1.4976871013641357,
  1.9969160556793213,
  2.496145009994507,
  2.9953742027282715,
  3.494603157043457,
  3.9938321113586426,
  4.493061065673828,
  4.992290019989014,
  5.491519451141357,
  5.990748405456543,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale2-sin.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.4992290139198303,
  0.9984580278396606,
  1.4976871013641357,
  1.9969160556793213,
  2.496145009994507,
  2.9953742027282715,
  3.494603157043457,
  3.9938321113586426,
  4.493061065673828,
  4.992290019989014,
  5.491519451141357,
  5.990748405456543,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale2-square.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.4992290139198303,
  0.9984580278396606,
  1.4976871013641357,
  1.9969160556793213,
  2.496145009994507,
  2.9953742027282715,
  3.494603157043457,
  3.9938321113586426,
  4.493061065673828,
  4.992290019989014,
  5.491519451141357,
  5.990748405456543,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale2-triangle.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.4992290139198303,
  0.9984580278396606,
  1.4976871013641357,
  1.9969160556793213,
  2.496145009994507,
  2.9953742027282715,
  3.494603157043457,
  3.9938321113586426,
  4.493061065673828,
  4.992290019989014,
  5.491519451141357,
  5.990748405456543,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/velocity-piano.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  1.0100680589675903,
  2.008526086807251,
  3.006984233856201,
  4.017052173614502,
  5.027120113372803,
  6.0371880531311035,
  7.058866024017334,
]
`;

exports[`Analyze Onsets "test/audio/velocity-saw.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  4.005442142486572,
  5.003900051116943,
  6.013968467712402,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/velocity-sin.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  4.005442142486572,
  5.003900051116943,
  6.025578022003174,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/velocity-square.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  4.005442142486572,
  5.003900051116943,
  6.002358436584473,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/velocity-triangle.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  4.005442142486572,
  5.003900051116943,
  6.013968467712402,
  7.999274253845215,
]
`;

exports[`Analyze Scale "test/audio/scale-piano.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale-saw.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale-sin.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale-square.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale-triangle.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale2-piano.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale2-saw.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/scale2-sin.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/scale2-square.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/scale2-triangle.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/velocity-piano.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/velocity-saw.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/velocity-sin.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/velocity-square.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/velocity-triangle.wav" 1`] = `"major"`;

exports[`Analyze Speed "test/audio/scale-piano.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale-saw.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale-sin.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale-square.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale-triangle.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale2-piano.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale2-saw.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale2-sin.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale2-square.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale2-triangle.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/velocity-piano.wav" 1`] = `119.83695983886719`;

exports[`Analyze Speed "test/audio/velocity-saw.wav" 1`] = `119.83695983886719`;

exports[`Analyze Speed "test/audio/velocity-sin.wav" 1`] = `119.83695983886719`;

exports[`Analyze Speed "test/audio/velocity-square.wav" 1`] = `119.83695983886719`;

exports[`Analyze Speed "test/audio/velocity-triangle.wav" 1`] = `119.83695983886719`;
